name:          devsurf
version:       0.0.1.0
category:
synopsis:      A developable surface design language.
description:   DevSurf is a modeling language for constructing developable surfaces.
author:        Tom Hawkins <tomahawkins@gmail.com>, Michel Kuhlmann <michel@kuhlmanns.info>
maintainer:    Michel Kuhlmann <michel@kuhlmanns.info>
license:       BSD3
license-file:  LICENSE
homepage:      http://github.com/michelk/devsurf
build-type:    Simple
cabal-version: >= 1.8

library
  hs-source-dirs:  src
  build-depends:   attoparsec
                 , base
                 , split
                 , text
                 , unordered-containers

  exposed-modules: DevSurf
                   -- Library
                   DevSurf.Types
                   DevSurf.Face
                   DevSurf.Edge
                   DevSurf.IndexedFaceSet
                   DevSurf.Curve
                   DevSurf.Panel
                   DevSurf.PanelFace
                   DevSurf.Vector
                   DevSurf.Transform
                   -- Readers
                   DevSurf.Readers
                   DevSurf.Readers.Sms2dm
                   DevSurf.Readers.ShewTriangle
                   DevSurf.Readers.Xyz
                   DevSurf.Readers.Obj
                   DevSurf.Readers.Dxf
                   -- Writers
                   DevSurf.Writers
                   DevSurf.Writers.Utils
                   DevSurf.Writers.PLY
                   DevSurf.Writers.OBJ
                   DevSurf.Writers.ShewTriangle
                   DevSurf.Writers.Sms2dm
                   DevSurf.Writers.STL
                   DevSurf.Writers.SVG
                   DevSurf.Writers.Xyz
                   DevSurf.Writers.Vtk
                   DevSurf.Writers.Index
                   DevSurf.Writers.SpringStrPt
 ghc-options:     -W
source-repository head
  type:     git
  location: git://github.com/michelk/devsurf.git

executable mshConv
  main-is:           mshConv.hs
  -- other-modules:
  ghc-options:
          -threaded
          -rtsopts
  build-depends:     base
                   , cmdargs
                   , devsurf
                   , filepath
                   , text
                   , unordered-containers
  hs-source-dirs:    bin
